@@ -24,7 +24,7 @@
         <revision>2.0</revision>
         <sha1 />
         <changelist>-SNAPSHOT</changelist>
-        <felles.version>3.2.31</felles.version>
+        <felles.version>3.2.39</felles.version>
         <prosesstask.version>2.5.16</prosesstask.version>
         <java.version>16</java.version>
         <argLine>-Xms256m -Dfile.encoding=UTF-8</argLine>
@@ -51,6 +51,11 @@
                 <version>${felles.version}</version>
                 <scope>import</scope>
                 <type>pom</type>
+            </dependency>
+            <dependency>
+                <groupId>no.nav.foreldrepenger.felles</groupId>
+                <artifactId>felles-abac-legacy</artifactId>
+                <version>${felles.version}</version>
             </dependency>
             <dependency>
                 <groupId>no.nav.vedtak.prosesstask</groupId>
@@ -339,7 +344,7 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.22.2</version>
                     <configuration>
-                        <argLine>--illegal-access=permit  --enable-preview</argLine>
+                        <argLine>--enable-preview</argLine>
                     </configuration>
                 </plugin>
                 <plugin>
